# Quantara_Owasp_Scanner

./: .dockerignore  .firebaserc  .gitignore  .pre-commit-config.yaml  =1.0.0  CLAUDE.md  POC_Embeding.md  QUANTARA_TASKS.md  README.md  Task.md  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  requirements-dev.txt  requirements.txt  secretscanner.db.bak  setup_backend.py  task.md.resolved  test_unified_engine.py
Centralize_Scanners/quantum_protocol/: __init__.py  cli.py  pyproject.toml
Centralize_Scanners/quantum_protocol/agents/: __init__.py  base_agent.py  crypto_harvest_analyzer.py  pqc_fingerprint_agent.py  pqc_library_db.json  pqc_library_engine.py  quantum_recon_agent.py
Centralize_Scanners/quantum_protocol/agents/tests/: test_pqc_library.py  (+3 more)
Centralize_Scanners/quantum_protocol/analyzers/: __init__.py  api_security.py  auth_scanner.py  broken_access.py  cloud_misconfig.py  endpoint_extractor.py  exception_scanner.py  frontend_js_analyzer.py  injection_scanner.py  insecure_design.py  integrity_scanner.py  logging_scanner.py  misconfig_engine.py  owasp_scanner.py  secrets_engine.py  semantic.py  sensitive_data_exposure.py  supply_chain.py
Centralize_Scanners/quantum_protocol/core/: __init__.py  engine.py
Centralize_Scanners/quantum_protocol/intelligence/: __init__.py  quantum_timeline.py
Centralize_Scanners/quantum_protocol/models/: __init__.py  enums.py  findings.py
Centralize_Scanners/quantum_protocol/plugins/: __init__.py
Centralize_Scanners/quantum_protocol/reporters/: __init__.py  attack_surface_report.py  html_report.py
Centralize_Scanners/quantum_protocol/rules/: __init__.py  owasp_rules.py  patterns.py
Centralize_Scanners/quantum_protocol/utils/: __init__.py  analysis.py
(+150 files in other folders)
